--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -1,46 +1,59 @@
 @import url('https://fonts.googleapis.com/css2?family=ADLaM+Display&family=Noto+Sans+Sogdian&family=Nunito+Sans:opsz,wght@6..12,600&family=Poppins:ital,wght@1,200&family=Raleway:ital,wght@1,300&family=Roboto:wght@300&display=swap');
-:root{
-    dark-primary:#1b1f24;
-    primary:#12bdff;
+
+:root {
+    dark-primary: #1b1f24;
+    primary: #12bdff;
 }
-*{
+
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
-header{
+
+header {
     background-color: #1b1f24;
     padding: 20px;
-    color:#fff;
+    color: #fff;
     display: flex;
     justify-content: space-around;
     align-items: center;
 }
-header.logo{
-    color: #12bdff;
+header a{
+    text-decoration: none;
+}
+
+.logo {
+    color:  #12bdff;
     font-weight: bold;
     letter-spacing: 2px;
 }
-body{
-     font-family: 'Nunito Sans', sans-serif;;
+
+body {
+    font-family: 'Nunito Sans', sans-serif;
 }
-ul{
+
+ul {
     display: flex;
     list-style: none;
 }
-ul li{
+
+ul li {
     margin-right: 20px;
 }
-ul li a{
+
+ul li a {
     color: #fff;
     text-decoration: none;
 }
-ul li a:hover{
+
+ul li a:hover {
     color: #12bdff;
 
 }
-header button{
-    padding:10px 20px ;
+
+header button {
+    padding: 10px 20px;
     font-weight: bold;
     background-color: #1b1f24;
     border: 1px solid #12bdff;
@@ -48,8 +61,9 @@ header button{
     border-radius: 5px;
 
 }
-header button:hover{
+
+header button:hover {
     cursor: pointer;
     background-color: #12bdff;
-    color:#fff;
+    color: #fff;
 }
