--- a/assets/CSS/style3.css
+++ b/assets/CSS/style3.css
@@ -1,9 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap');
 
 :root {
-    --primary-dark: #1b1f24;
-    --primary-dark2: #22282f;
-    --seconday-light: #12bdff;
+    --primary-dark: #4e4e50;
+    --primary-dark2: #1a1a1a;
+    --seconday-light: #c30734;
     --text-color: #fff;
     --par-color: gray;
 }
@@ -21,7 +21,7 @@ body {
 
 /* header-section */
 header {
-    background-color: var(--primary-dark);
+    background-color: var(--primary-dark2);
     padding: 20px;
     color: var(--text-color);
     display: flex;
@@ -64,8 +64,8 @@ header button {
     padding: 10px 20px;
     font-weight: bold;
     background-color: var(--primary-dark);
-    border: 1px solid #12bdff;
-    color: var(--seconday-light);
+    border: 1px solid #c30734;
+    color: var(--text-color);
     border-radius: 5px;
 
 }
@@ -155,8 +155,8 @@ header button:hover {
     padding: 10px 20px;
     font-weight: bold;
     background-color: var(--primary-dark);
-    border: 1px solid #12bdff;
-    color: var(--seconday-light);
+    border: 1px solid #c30734;
+    color: var(--text-color);
     border-radius: 5px;
 
 }
@@ -176,7 +176,9 @@ header button:hover {
     margin-right: 5px;
 }
 .light:hover {
-    background-color: #0c8ec2;
+    background-color: #4e4e50;
+    border: 1px solid #fff;
+    color: #fff;
 }
 
 /* about me section */
